--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Reem+Kufi+Fun:wght@500&family=Rubik:wght@500&display=swap');
 
 html {
     box-sizing: border-box;
@@ -5,6 +6,32 @@ html {
 
 body {
     margin: 0;
-    min-height: 100vh;
+    font-family: 'Reem Kufi Fun', sans-serif;
+    background: whitesmoke;
     
+}
+
+h1 {
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    font-size: 40px;
+    letter-spacing: 5px;
+}
+
+/* Loader */
+.loader {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.8);
+}
+
+.loader img {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
